# pyoxynet

./: .dockerignore  .gitignore  .gitmodules  .readthedocs.yaml  404.html  Dockerfile  Gemfile  README.md  _config.yml  another-page.md  build.sh  deploy_heroku.sh  heroku.yml  index.html  index.md  index.xml  requirements.txt  setup.py  steps-to-greatness.md  test_generate_cpet.py  test_lightweight.py  test_lightweight_final.py
app/: app.py  (+25 more)
pyoxynet/: LICENSE.txt  README.md  __init__.py  build.sh  debugging.py  pyproject.toml  requirements.txt  setup.py  test_utilities.py  utilities.py
pyoxynet/pyoxynet/: __init__.py  model.py  setup.cfg  setup.py  testing.py  utilities.py
pyoxynet/pyoxynet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pyoxynet/pyoxynet/AIS/: keras_metadata.pb  saved_model.pb  variables.data-00000-of-00001  variables.index
pyoxynet/pyoxynet/LSTMGRUModel/: keras_metadata.pb  saved_model.pb  variables.data-00000-of-00001  variables.index
pyoxynet/pyoxynet/NSWIS/: keras_metadata.pb  saved_model.pb  variables.data-00000-of-00001  variables.index
pyoxynet/pyoxynet/TCN/: keras_metadata.pb  saved_model.pb  variables.data-00000-of-00001  variables.index
pyoxynet/pyoxynet/data_test/: data_test.csv  database_statistics.csv  database_statistics_ramp.csv  database_statistics_resting.csv  ramp_real_test_1.csv  ramp_real_test_10.csv  ramp_real_test_11.csv  ramp_real_test_12.csv  ramp_real_test_13.csv  ramp_real_test_14.csv  ramp_real_test_15.csv  ramp_real_test_16.csv  ramp_real_test_17.csv  ramp_real_test_18.csv  ramp_real_test_19.csv  (+127 more)
(+114 files in other folders)
